--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "main": "dist/vuetable-3.umd.js",
   "dependencies": {
-    "axios": "^1.1.3",
+    "axios": "1.6.0",
     "vuedraggable-es": "^4.1.1"
   },
   "devDependencies": {
